--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,63 @@
-
+/*I've split off CSS files for each page, as well as a seperate one for common elements across both pages such as header & footer. 
+This helps me organise my CSS and is also something I was advised to do by my mentor as it helps with load times
+(theoretically - he also said it won't make much difference on projects of this scale, but is a good practise to get into),
+This page covers the common elements across the site.
+*/
 
 @import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Roboto&display=swap");
 
+/*Sitewide body & common elements such as buttons*/
 body{
     font-family: 'roboto', sans-serif;
     color: #8C7851;
     background-color: #DBC589; 
     text-align: center;
     }
+.blue-button:hover {
+	background-color:#b4ced9;
+    color:#2c4653;
+}
+.blue-button:active {
+	position:relative;
+	top:1px;
+}
+
+.modal .blue-button:hover {
+	background-color:#DBC589;
+    color:#2c4653;
+}
+
+.blue-button .no-hover:hover  {
+    background-color: #2c4653;
+    color: #b4ced9;
+}
+
+.brown-button {
+    background-color:  #DBC589;
+    border-radius: 7px;
+    border: none;
+    display: inline-block;
+    cursor: pointer;
+    color: #8C7851;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px 25px;
+    text-decoration: none;
+    font-family: 'Nothing You Could Do', cursive;
+    text-align: center;
+}
+
+.brown-button:hover {
+	background-color: #8C7851;
+    color: #DBC589;
+}
+.brown-button:active {
+	position:relative;
+	top:1px;
+}
+
+
+/*Header Styling*/
 
 .logo{
     width: 320px;
@@ -78,88 +128,6 @@ h1 {
     font-family: 'Nothing You Could Do', cursive;
 }
 
-.blue-button:hover {
-	background-color:#b4ced9;
-    color:#2c4653;
-}
-.blue-button:active {
-	position:relative;
-	top:1px;
-}
-
-.modal .blue-button:hover {
-	background-color:#DBC589;
-    color:#2c4653;
-}
-
-.blue-button .no-hover:hover  {
-    background-color: #2c4653;
-    color: #b4ced9;
-}
-
-.brown-button {
-    background-color:  #DBC589;
-    border-radius: 7px;
-    border: none;
-    display: inline-block;
-    cursor: pointer;
-    color: #8C7851
-    font-size: 20px;
-    font-weight: bold;
-    padding: 5px 25px;
-    text-decoration: none;
-    font-family: 'Nothing You Could Do', cursive;
-    text-align: center;
-}
-
-.brown-button:hover {
-	background-color: #8C7851;
-    color: #DBC589;
-}
-.brown-button:active {
-	position:relative;
-	top:1px;
-}
-
-
-/*Footer*/
-footer {
-    background-color: #2C4653;
-    min-height: 130px;
-}
-
-.coffeeright {
-    text-align: center;
-    color: #B4CED9;
-    padding-bottom: 25px
-}
-
-#contact-us {
-    text-align: center;
-    padding-left: 0;
-}
-
-.contact-icon {
-    padding: 20px 60px 25px 0px;
-    font-size: 2.5rem;
-    text-align: center;
-    width: 40px;
-}
-
-.contact-icon a {
-    color: #B4CED9;
-    width: 40px;
-}
-
-.contact-icon a:hover {
-    color: #DBC589;
-    text-decoration: none;
-}
-
-div#map {
-    min-height: 500px;
-}
-
 /*header media queries*/
 .navbar-toggler{
     margin-bottom: 5%;
@@ -203,6 +171,43 @@ div#map {
   }
 }
 
+/*Footer Styling*/
+footer {
+    background-color: #2C4653;
+    min-height: 130px;
+}
+
+.coffeeright {
+    text-align: center;
+    color: #B4CED9;
+    padding-bottom: 25px
+}
+
+#contact-us {
+    text-align: center;
+    padding-left: 0;
+}
+
+.contact-icon {
+    padding: 20px 60px 25px 0px;
+    font-size: 2.5rem;
+    text-align: center;
+    width: 40px;
+}
+
+.contact-icon a {
+    color: #B4CED9;
+    width: 40px;
+}
+
+.contact-icon a:hover {
+    color: #DBC589;
+    text-decoration: none;
+}
+
+div#map {
+    min-height: 500px;
+}
 
 /* ------ Modal styling ------- */
 
